# dotfiles

./: README.md
alacritty/: alacritty.toml
bash/: .bashrc
cmake/: CMakeLists.txt
ghostty/: config
jetbrains/: .ideavimrc
nvim/: init.lua  lazy-lock.json
nvim/lua/: keymaps.lua  plugins.lua  settings.lua
nvim/lua/configs/: completions.lua  lsp.lua  telescope.lua
obsidian/: .obsidian.vimrc  code.css  custom.css  main.css
obsidian/snippets/: custom.css
sublime-text/: Default (Windows).sublime-keymap  FileManager.sublime-settings  LaTeXTools.sublime-settings  Package Control.sublime-settings  Preferences.sublime-settings  Terminus.sublime-settings  gruvbox.sublime-theme
tmux/: .tmux.conf
visual-studio-code/: keybindings.jsonc  settings.jsonc
visual-studio-code/build-tasks/cpp/linux/: tasks.json
visual-studio-code/build-tasks/cpp/windows/: tasks.json
vscode/: settings.json
wezterm/: .wezterm.lua
zed/: settings.json
